--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -2,16 +2,17 @@
   <%= link_to t('buttons.sign_in'), new_session_path(resource_name) %><br />
 <% end %>
 
+<%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+    <%= link_to image_tag(oauth_logo(provider), class: 'oauth-logo'), omniauth_authorize_path(resource_name, provider), method: :post %>
+  <% end -%>
+<% end -%>
+<p></p>
+
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to t('buttons.sign_up'), new_registration_path(resource_name) %><br />
 <% end %>
 <p></p>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post %><br />
-  <% end -%>
-<% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to t('buttons.password_forget'), new_password_path(resource_name) %><br />
