--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -22,6 +22,18 @@
             <%= f.input :password_confirmation, required: true %>
           </div>
 
+          <div class="form-group">
+            <h4><%= t('titles.avatar')%></h4>
+            <div class="row">
+              <div class="col-sm-4">
+                <p><%= image_tag(@user.avatar.thumb.url) if @user.avatar? %></p>
+              </div>
+              <div class="row-sm-4">
+                <p><%= f.file_field :avatar, as: :file %></p>
+              </div>
+            </div>
+          </div>
+
           <%= f.button :submit, t('buttons.sign_up'), class: "btn-primary" %>
 
         <% end %>
